fix(TAP-12074) add different bucket model write sink strategy and tests